<resources>
    <string name="app_name">Dashboard</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="Vilection">Vilection</string>
    <string name="let_s_sign_you_in">Let\'s sign you in.</string>
    <string name="welcome_to_nvilection">Welcome to \nVilection</string>
    <string name="nomor_induk_mahasiswa">Nomor Induk Mahasiswa</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    
    <string name="title">VILECTION</string>
    <string name="voting">Pilih tombol dibawah untuk menuju halaman voting</string>
    <string name="beginVoting">BEGIN VOTING</string>
    <string name="profile">Profile</string>
    <string name="textProfile">Pilih tombol dibawah untuk menuju halaman profile</string>
    <string name="logout">Logout</string>
    <string name="selamat_datang_halaman_voting">Selamat datang di Vilection \n Pilih calon yang anda inginkan</string>
</resources>